# EliteEC-SDK

./: Init.py  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/elite_ec_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/robot/: Logo.py  SDK.py  __init__.py  __main__.py  config.toml
